# metabo_kg

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  ANNOUNCEMENT.md  CHANGELOG.md  CHEATSHEET.md  CITATION.cff  CLAUDE.md  EXAMPLES.md  HSA_SUMMARY.md  LICENSE  README.md  SESSION-NOTES-2026-03-06.md  WORKFLOW.md  cho_glycolysis_fba.md  cho_ldh_knockout.md  commit.txt  meta_kg_analysis_20260306.md  metabokg-analysis-2026-03-18-002618.md  metabokg-simulate-fba-2026-04-19-010915.md  metakg-codekg-analysis-2026-03-03.md  pre-commit-refactor.md  pyproject.toml  release-notes.md
.claude/: settings.json
.claude/commands/: metabokg-analyze.md  metabokg-build.md  metabokg-simulate.md  metabokg-viz.md  metakg-analyze.md  metakg-build.md  metakg-simulate.md  metakg-viz.md  pycodekg-rebuild.md  release.md
.claude/skills/metabokg/: SKILL.md
.claude/skills/metabokg-thorough-analysis/: SKILL.md
.claude/skills/metabokg/references/: installation.md
.claude/skills/metakg-thorough-analysis/: SKILL.md
.claude/skills/pycodekg/: SKILL.md
.github/workflows/: ci.yml
.pycodekg/snapshots/: manifest.json
analysis/: cho_ldh_knockout.md  metakg-analysis-2026-03-06-153153.md  metakg-analysis-2026-03-06-163949.md  metakg-analysis-2026-03-06-164541.md  metakg-analysis-2026-03-06-165424.md  metakg-analysis-2026-03-06-165609.md  metakg-analysis-2026-03-06-170035.md  metakg-analysis-2026-03-06-170523.md
article/: metabokg_article.bbl  metabokg_article.blg  metabokg_article.tex  metakg_article.blg  metakg_article.tex  metakg_article_orig.tex  metakg_revised.blg  references.bib
data/: cge_gene_names.tsv  hsa_gene_names.tsv  kegg_glycan_names.tsv  kegg_ko_names.tsv  kegg_reaction_detail.tsv  sabio_cho_kinetics.tsv
data/cge_pathways/: cge00010.kgml  cge00020.kgml  cge00030.kgml  cge00040.kgml  cge00051.kgml  cge00052.kgml  cge00053.kgml  cge00061.kgml  cge00062.kgml  cge00071.kgml  cge00100.kgml  cge00120.kgml  cge00130.kgml  cge00140.kgml  cge00190.kgml  cge00220.kgml  cge00230.kgml  cge00232.kgml  cge00240.kgml  cge00250.kgml  cge00260.kgml  cge00270.kgml  cge00280.kgml  cge00290.kgml  cge00310.kgml  cge00330.kgml  cge00340.kgml  cge00350.kgml  cge00360.kgml  cge00380.kgml  cge00400.kgml  cge00410.kgml  cge00430.kgml  cge00440.kgml  cge00450.kgml  cge00470.kgml  cge00480.kgml  cge00500.kgml  cge00510.kgml  cge00511.kgml  (+326 more)
data/hsa_pathways/: hsa00270.kgml  hsa00514.kgml  hsa04979.kgml
data/hsa_pathways/.metabokg/snapshots/: manifest.json
data/kegg_tables/: kegg_reaction_names.tsv
docs/: CAPABILITIES.md  CHEATSHEET.md  EXAMPLES.md  FEATURES.md  HANDOFF-2026-04-19.md  INSTALL.md  MCP.md  SESSION-NOTES-2026-03-06.md  WORKFLOW.md  analysis_v0.7.0.md  analysis_v0.8.0.md  analysis_v0.8.1.md  cho_workflow.md  icho_workflow.md  meta_kg_analysis_20260306.md  release-notes.md
outreach/: betenbaugh_jhmi_outreach.md
refs/: wire-kegg-enzymes.md
scripts/: article_examples.py  collect_pathway_data.py  download_cho_kegg.py  download_human_kegg.py  download_icho_model.py  download_kegg_names.py  download_kegg_reactions.py  examples.py  fetch_sabio_cho_kinetics.py  generate_wiki.py  install-skill.sh  simulation_demo.py  wire_kegg_enzymes.py
src/metabokg/: __init__.py  analyze.py  app.py  cho_kinetics.py  downloader.py  embed.py  enrich.py  graph.py  index.py  kinetics_fetch.py  layout3d.py  mcp_tools.py  metabokg_viz.py  metabokg_viz3d.py  metakg_viz.py  metakg_viz3d.py  orchestrator.py  primitives.py  simulate.py  snapshots.py  store.py  synthesize.py  thorough_analysis.py  viz3d.py
src/metabokg/cli/: __init__.py  _utils.py  cmd_analyze.py  cmd_build.py  cmd_hooks.py  cmd_info.py  cmd_init.py  cmd_mcp.py  cmd_pack.py  cmd_query.py  cmd_simulate.py  cmd_snapshot.py  cmd_synthesize.py  cmd_viz.py  cmd_viz3d.py  main.py  options.py
src/metabokg/parsers/: __init__.py  base.py  biopax.py  csv_tsv.py  kgml.py  sbml.py
src/metakg/: __init__.py  analyze.py  app.py  embed.py  enrich.py  graph.py  index.py  kinetics_fetch.py  layout3d.py  mcp_tools.py  metakg_viz.py  metakg_viz3d.py  orchestrator.py  primitives.py  simulate.py  store.py  thorough_analysis.py  viz3d.py
src/metakg/cli/: __init__.py  _utils.py  cmd_analyze.py  cmd_build.py  cmd_mcp.py  cmd_simulate.py  cmd_viz.py  cmd_viz3d.py  main.py  options.py
src/metakg/parsers/: __init__.py  base.py  biopax.py  csv_tsv.py  kgml.py  sbml.py
tests/: test_downloader.py  test_orchestrator.py  test_parsers.py  test_primitives.py  test_simulation.py  test_snapshot_subclass.py  test_store.py
