[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "metakg"
version = "0.3.0"
description = "Metabolic pathway parser and semantic knowledge graph with MCP support"
authors = ["Eric G. Suchanek, PhD <suchanek@mac.com>"]
license = "Elastic-2.0"
keywords = ["metabolic-pathways", "knowledge-graph", "bioinformatics", "semantic-search", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{ include = "metakg", from = "src" }]

[tool.poetry.dependencies]
python     = ">=3.12, <3.13"
lancedb    = ">=0.29.0"
numpy      = ">=1.24.0"
sentence-transformers = ">=2.7.0"
click      = ">=8.0"
mcp        = ">=1.0.0"
code-kg    = { git = "https://github.com/Flux-Frontiers/code_kg.git", branch = "main" }

[tool.poetry.dependencies.scipy]
version  = ">=1.11.0"
optional = true

[tool.poetry.dependencies.rdflib]
version  = ">=6.0.0"
optional = true

[tool.poetry.dependencies.streamlit]
version  = ">=1.35.0"
optional = true

[tool.poetry.dependencies.matplotlib]
version  = ">=3.8.0"
optional = true

[tool.poetry.dependencies.pandas]
version  = ">=2.0.0"
optional = true

[tool.poetry.dependencies.pyvis]
version  = ">=0.3.2"
optional = true

[tool.poetry.dependencies.pyvista]
version  = ">=0.44.0"
optional = true

[tool.poetry.dependencies.pyvistaqt]
version  = ">=0.11.0"
optional = true

[tool.poetry.dependencies.PyQt5]
version  = ">=5.15.0"
optional = true

[tool.poetry.dependencies.param]
version  = ">=2.0.0"
optional = true

[tool.poetry.extras]
biopax   = ["rdflib"]
simulate = ["scipy"]
viz      = ["streamlit", "pyvis", "matplotlib", "pandas"]
viz3d    = ["pyvista", "pyvistaqt", "PyQt5", "param"]
all      = ["rdflib", "scipy", "streamlit", "pyvis", "matplotlib", "pandas", "pyvista", "pyvistaqt", "PyQt5", "param"]

[tool.poetry.group.dev.dependencies]
pytest     = ">=8.0.0"
pytest-cov = ">=5.0.0"
ruff       = ">=0.4.0"
mypy       = ">=1.10.0"
pytest-timeout = "^2.4.0"
pre-commit     = ">=4.0.0"
detect-secrets = "^1.5.0"
pylint = "^4.0.5"

[tool.poetry.scripts]

# metakg metabolic pathway cli entrypoints

metakg                = "metakg.cli.main:cli"
metakg-build          = "metakg.cli:build_main"
metakg-update         = "metakg.cli:update_main"
metakg-enrich         = "metakg.cli:enrich_main"
metakg-mcp            = "metakg.cli:mcp_main"
metakg-viz            = "metakg.cli:viz_main"
metakg-viz3d          = "metakg.cli:viz3d_main"
metakg-analyze        = "metakg.cli:analyze_main"
metakg-analyze-basic  = "metakg.cli:analyze_basic_main"
metakg-simulate       = "metakg.cli:simulate_main"

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version      = "3.12"
strict              = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
