[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "metabo-kg"
version = "0.5.0"
description = "Metabolic pathway parser and semantic knowledge graph with MCP support"
authors = ["Eric G. Suchanek, PhD <suchanek@mac.com>"]
license = "Elastic-2.0"
keywords = ["metabolic-pathways", "knowledge-graph", "bioinformatics", "semantic-search", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
packages = [{ include = "metabokg", from = "src" }]

[tool.poetry.dependencies]
python     = ">=3.12,<3.14"
lancedb    = ">=0.29.0"
numpy      = ">=1.24.0"
sentence-transformers = ">=2.7.0"
click      = ">=8.0"
mcp        = ">=1.0.0"

# our own adaptors
kg-snapshot = { git = "https://github.com/Flux-Frontiers/kg_snapshot.git" }
pycode-kg = {git = "https://github.com/Flux-Frontiers/pycode_kg.git", optional=true}
agent-kg = {git = "https://github.com/Flux-Frontiers/agent_kg.git", optional=true}
ftree-kg = {git = "https://github.com/Flux-Frontiers/ftree_kg.git", optional=true}
doc-kg = {git = "https://github.com/Flux-Frontiers/doc_kg.git", optional=true}
memory-kg = {git = "https://github.com/Flux-Frontiers/memory_kg.git", optional=true}

[tool.poetry.dependencies.scipy]
version  = ">=1.11.0"
optional = true

[tool.poetry.dependencies.rdflib]
version  = ">=6.0.0"
optional = true

[tool.poetry.dependencies.streamlit]
version  = ">=1.35.0"
optional = true

[tool.poetry.dependencies.matplotlib]
version  = ">=3.8.0"
optional = true

[tool.poetry.dependencies.pandas]
version  = ">=2.0.0"
optional = true

[tool.poetry.dependencies.pyvis]
version  = ">=0.3.2"
optional = true

[tool.poetry.dependencies.pyvista]
version  = ">=0.44.0"
optional = true

[tool.poetry.dependencies.pyvistaqt]
version  = ">=0.11.0"
optional = true

[tool.poetry.dependencies.PyQt5]
version  = ">=5.15.0"
optional = true

[tool.poetry.dependencies.param]
version  = ">=2.0.0"
optional = true

[tool.poetry.extras]
biopax   = ["rdflib"]
simulate = ["scipy"]
viz      = ["streamlit", "pyvis", "matplotlib", "pandas"]
viz3d    = ["pyvista", "pyvistaqt", "PyQt5", "param"]
all      = ["rdflib", "scipy", "streamlit", "pyvis", "matplotlib", "pandas", "pyvista", "pyvistaqt", "PyQt5", "param"]
kg = ["pycode-kg", "agent-kg", "ftree-kg", "doc-kg", "memory-kg"]

[tool.poetry.group.dev.dependencies]
pytest     = ">=8.0.0"
pytest-cov = ">=5.0.0"
ruff       = ">=0.4.0"
mypy       = ">=1.10.0"
pytest-timeout = "^2.4.0"
pre-commit     = ">=4.0.0"
detect-secrets = "^1.5.0"
pylint = "^4.0.5"

[tool.poetry.scripts]

# metabokg metabolic pathway cli entrypoints

metabokg                = "metabokg.cli.main:cli"
metabokg-build          = "metabokg.cli:build_main"
metabokg-update         = "metabokg.cli:update_main"
metabokg-enrich         = "metabokg.cli:enrich_main"
metabokg-mcp            = "metabokg.cli:mcp_main"
metabokg-viz            = "metabokg.cli:viz_main"
metabokg-viz3d          = "metabokg.cli:viz3d_main"
metabokg-analyze        = "metabokg.cli:analyze_main"
metabokg-analyze-basic  = "metabokg.cli:analyze_basic_main"
metabokg-simulate       = "metabokg.cli:simulate_main"
metabokg-snapshot       = "metabokg.cli:snapshot_main"

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version      = "3.12"
strict              = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.pycodekg]
include = ["src"]
